[gd_scene load_steps=6 format=2]

[ext_resource path="res://script/Policy/Slot.gd" type="Script" id=1]
[ext_resource path="res://images/styleboxflat/conservative_round.tres" type="StyleBox" id=2]
[ext_resource path="res://images/styleboxflat/noshow_round.tres" type="StyleBox" id=3]
[ext_resource path="res://images/other/tree_slot_left.png" type="Texture" id=4]
[ext_resource path="res://images/other/tree_slot_right.png" type="Texture" id=6]

[node name="Icon" type="Button"]
margin_right = 120.0
margin_bottom = 120.0
rect_min_size = Vector2( 120, 120 )
custom_styles/hover = ExtResource( 3 )
custom_styles/pressed = ExtResource( 2 )
custom_styles/focus = ExtResource( 2 )
custom_styles/disabled = ExtResource( 2 )
custom_styles/normal = ExtResource( 2 )
clip_text = true
expand_icon = true
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Left_Right" type="HBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -81.0
margin_top = -50.0
margin_right = 81.0
margin_bottom = 50.0
size_flags_horizontal = 14
size_flags_vertical = 14
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Left" type="Button" parent="Left_Right"]
margin_top = 25.0
margin_right = 50.0
margin_bottom = 75.0
rect_min_size = Vector2( 50, 50 )
size_flags_horizontal = 2
size_flags_vertical = 6
size_flags_stretch_ratio = 0.0
icon = ExtResource( 4 )
flat = true
align = 0
expand_icon = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Right" type="Button" parent="Left_Right"]
margin_left = 112.0
margin_top = 25.0
margin_right = 162.0
margin_bottom = 75.0
rect_min_size = Vector2( 50, 50 )
size_flags_horizontal = 10
size_flags_vertical = 6
size_flags_stretch_ratio = 0.0
icon = ExtResource( 6 )
flat = true
align = 0
expand_icon = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PolicyContainer" type="HBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 14
size_flags_vertical = 14
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="button_up" from="Left_Right/Left" to="." method="_on_left_button_up"]
[connection signal="button_up" from="Left_Right/Right" to="." method="_on_right_button_up"]
